Movie App HW displaying all seed movies

--- a/StevenTran-steventran06/games/app/views/scramble/show.html.erb
+++ b/StevenTran-steventran06/games/app/views/scramble/show.html.erb
@@ -1,5 +1,7 @@
 <%= render @outcome_partial %>
 
+<h3>You guessed <%= @guess.upcase %></h3>
+
 <h3>The scrambled word was <%= @word.upcase %></h3>
 
 <h3><%= link_to 'Play Again', new_scramble_path %></h3>
