Added associations between Users and URLs on Ritly, root page only shows User's URLs

--- a/StevenTran-steventran06/Ritly/app/views/urls/new.html.erb
+++ b/StevenTran-steventran06/Ritly/app/views/urls/new.html.erb
@@ -14,7 +14,7 @@
   </thead>
 
   <tbody>
-    <% @urls.each do |url| %>
+    <% @user.urls.each do |url| %>
       <tr>
         <td><%= url.link %></td>
         <td><%= url.hash_code %></td>
