--- a/StevenTran-steventran06/Rewsly/app/views/stories/_storiestable.html.erb
+++ b/StevenTran-steventran06/Rewsly/app/views/stories/_storiestable.html.erb
@@ -10,8 +10,7 @@
   </thead>
 
   <tbody>
-      <% @stories.each do |story| %>
-        <% if story.upvotes > 4 && story.created_at > Date.today %>
+      <% @user.stories.each do |story| %>
         <tr>
           <td><%= story.title %></td>
           <td><%= link_to "#{story.link}", "#{story.link}" %></td>
@@ -23,7 +22,6 @@
           <td><%= link_to 'Edit', edit_story_path(story) %></td>
           <td><%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
-        <% end %>
       <% end %>
   </tbody>
 </table>
